fix: resolve footer stacking and spacing issues

--- a/src/styles/components/_number.scss
+++ b/src/styles/components/_number.scss
@@ -8,6 +8,7 @@
   width: 5.6rem;
   border: 1px solid $slate-300;
   border-radius: 100%;
+  background-color: $white;
 
   &::before {
     content: '';
