--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -156,6 +156,7 @@ p {
   width: 5.6rem;
   border: 1px solid #d1d1df;
   border-radius: 100%;
+  background-color: #fafafa;
 }
 .number::before {
   content: "";
@@ -230,12 +231,13 @@ p {
 }
 
 .footer {
+  position: relative;
+  overflow: visible;
   background-image: url("../../../assets/desktop/image-footer.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  overflow: hidden;
-  position: relative;
+  margin-top: 10.8rem;
 }
 .footer::before {
   content: "";
@@ -244,10 +246,6 @@ p {
   background-color: rgba(77, 150, 169, 0.8);
   z-index: 0;
 }
-.footer__number-wrapper, .footer__cta {
-  position: relative;
-  z-index: 1;
-}
 .footer__number-wrapper {
   width: 100%;
   max-width: 1120px;
@@ -255,6 +253,11 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 @media (max-width: 600px) {
   .footer__number-wrapper {
@@ -269,7 +272,9 @@ p {
   justify-content: space-between;
   align-items: center;
   gap: 3.2rem;
-  min-height: 41rem;
+  min-height: 31.2rem;
+  position: relative;
+  z-index: 1;
 }
 @media (max-width: 600px) {
   .footer__cta {
